syntax = "proto3";

package example;

message User {
  string id = 1;
  string email = 2;
};

message GetUsersResponse {
  repeated User users = 1;
}

message GetUsersRequest {}

service UserService {
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}